force-app/main/default/objects/QuoteLineItem/fields/CER_s__c.field-meta.xml
<CustomField>
    <fullName>CER_s__c</fullName>
    <label>CER&apos;s Euro/Tonne</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>