force-app/main/default/objects/QuoteLineItem/fields/Dec_2014__c.field-meta.xml
<CustomField>
    <fullName>Dec_2014__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Dec 2014</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>