force-app/main/default/objects/QuoteLineItem/fields/Dec__c.field-meta.xml
<CustomField>
    <fullName>Dec__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Dec 2011</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>