force-app/main/default/objects/QuoteLineItem/fields/EU_CER_Previous__c.field-meta.xml
<CustomField>
    <fullName>EU_CER_Previous__c</fullName>
    <label>EU/CER Previous</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>