force-app/main/default/objects/QuoteLineItem/fields/EU_EUA_s_Euro_Tonne__c.field-meta.xml
<CustomField>
    <fullName>EU_EUA_s_Euro_Tonne__c</fullName>
    <label>EU EUA&apos;s Euro/Tonne</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>