force-app/main/default/objects/QuoteLineItem/fields/EUA_s_Previous_Close__c.field-meta.xml
<CustomField>
    <fullName>EUA_s_Previous_Close__c</fullName>
    <label>EUA&apos;s Previous Close</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>