force-app/main/default/objects/QuoteLineItem/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <label>Period</label>
    <type>TextArea</type>
</CustomField>