force-app/main/default/objects/QuoteLineItem/fields/Spot__c.field-meta.xml
<CustomField>
    <fullName>Spot__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Spot</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>