force-app/main/default/objects/QuoteLineItem/fields/Spreads_EUA_CER__c.field-meta.xml
<CustomField>
    <fullName>Spreads_EUA_CER__c</fullName>
    <formula>EU_EUA_s_Euro_Tonne__c  -  CER_s__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spreads EUA/CER</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>